--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "dayjs": "^1.11.7",
+    "global": "^4.4.0",
     "register-service-worker": "^1.7.2",
+    "serve": "^14.2.0",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-property-decorator": "^9.1.2",
